# demo_drf-social-auth2

social_auth_django/: db.sqlite3  pyproject.toml
social_auth_django/core/: settings.py  urls.py
social_auth_django/module/post/: models.py  urls.py  views.py
social_auth_django/module/post/helper/: sr.py
social_auth_django/module/post/migrations/: 0001_initial.py
